--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,6 +175,11 @@ border-radius: 10px 10px;
     width: auto;
     height: fit-content;
 }
+#why h1{
+    font-size: 2.5em;
+    text-align: center;
+    font-family: var(--head);
+}
 section{
     width: 95%;
     height: fit-content;
@@ -195,16 +200,21 @@ section{
 }
 .why-box h2{
     margin-bottom: 20px;
+    font-size: 1.5em;
+    font-family: var(--head);
 } 
 .why-box p{
     font-family: var(--font);
-    font-size: 0.98em;
+    font-size: 1.1em;
 }
 .btn-box{
     display: flex;
     justify-content: center;
     width: auto;
     height: fit-content;
+}
+.btn{
+    font-size: 1.2em;
 }
 
 @media screen and (max-width:991px) {
@@ -233,10 +243,52 @@ section{
     width: auto;
     height: fit-content;  
     background-color:#111829;
+    display: flex;
+    justify-content: space-around;
+    padding: 25px;
 }
 .enroll-box{
-width: 49%;
-background-color: #1a1918;
-height: 600px;
+width: 45%;
+height: fit-content;
+border-radius: 5px;
+}
+#enroll .text{
+    padding-top: 40px;
+}
+#enroll .enroll-box h2{
+    color: white;
+    font-size: 2.3em;
+    margin-bottom: 50px;
+}
+#enroll .enroll-box p{
+    color: white;
+    font-family: var(--font);
+}
+#enroll .enroll-box a{
+    padding: 10px 5px;
+    background-color: var(--yellow);
+    color: black;
+    border-radius: 3px;
+    font-family: var(--font);
+}
+#enroll .enroll-box a:hover i{
+    transform: scaleX(1.3);
+}
+
+#enroll .pic{
+    background-image: url(../image/class.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
+}
+@media screen and (max-width:991px) {
+    #enroll{
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+    }
+    .enroll-box{
+        width: 90%;
+        margin: 0 auto;
+    }
 }
 /* Enroll Box Styling Ends */
