--- a/static/css/style.css
+++ b/static/css/style.css
@@ -163,8 +163,8 @@ border-radius: 10px 10px;
 }
 .overlay{
     width: auto;
-    height: 90vh;
-    background-color: rgba(0, 0, 0, 0.7)
+    height: inherit;
+    background-color: rgba(0, 0, 0, 0.8)
 }
 .space{
     width: auto;
@@ -292,3 +292,72 @@ border-radius: 5px;
     }
 }
 /* Enroll Box Styling Ends */
+
+/* Course Styling Begins */
+#courses{
+    width: auto;
+    height: fit-content;
+}
+#courses h2{
+    text-align: center;
+    font-size: 2.5em;
+    font-family: var(--head);
+
+}
+#courses p{
+    text-align: center;
+    font-family: var(--para);
+}
+.course-container{
+    height: fit-content;
+    width: 78%;
+    margin: 20px auto;
+    justify-content: space-around;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+.course-container .course-box{
+    width: 30%;
+    height: 400px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9),
+    0 6px 20px 0 rgba(0, 0, 0, 0.9);
+}
+.course-container .img1{
+    background-image: url(/static/image/course1\ \(1\).jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.course-container .img2{
+    background-image: url(/static/image/course1\ \(2\).jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.course-container .img3{
+    background-image: url(/static/image/course1\(3\).jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.course-container .course-box .overlay{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+.course-container .course-box .overlay h3{
+    color: white;
+    font-size: 2em;
+}
+@media screen and (max-width:991px){
+    .course-container .course-box{
+        width: 45%;
+        margin-bottom: 15px;
+    }
+}
+@media screen and (max-width:767px){
+    .course-container .course-box{
+        width: 90%;
+    }
+}
+
+/* Course Styling Ends */
