--- a/static/css/style.css
+++ b/static/css/style.css
@@ -359,5 +359,84 @@ border-radius: 5px;
         width: 90%;
     }
 }
-
+#courses .btn-box a{
+    padding:10px 8px;
+    background-color: var(--yellow);
+    color: black;
+    font-family: var(--font);
+}
+#courses .btn-box a:hover i{
+    transform: scaleX(1.3);
+}
 /* Course Styling Ends */
+
+
+/* About styling Begins */
+#about{
+    background-color: #111829;
+    width: auto;
+    height: fit-content;
+    padding: 50px 0;
+}
+#about h2{
+    text-align: center;
+    color: white;
+    font-size: 2em;
+    font-family: var(--head);
+}
+#about p{
+    color: white;
+    text-align: center;
+    font-family: var(--para);
+}
+#about-container{
+    width: 80%;
+    height: fit-content;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-around;
+}
+#about-container .about-box{
+    width: 30%;
+    background-color: white;
+    height: 280px;
+    border-radius: 5px;
+    padding: 25px;
+}
+#about-container .about-box .info{
+    width: auto;
+    height: 35%;
+    background-color: black;
+    display: flex;
+    align-items: center;
+}
+#about-container .about-box .info .pic{
+    width: 22%;
+    height: 60px;
+    background-color: white;
+    border-radius: 50%;
+}
+.pic1{
+    background-image: url(../image/testimony01.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.pic2{
+    background-image: url(../image/testimony02.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.pic3{
+    background-image: url(../image/testimony03.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.name{
+    width:65%;
+    height: 100%;
+    background-color: white;
+    margin-left: 20px;
+}
+
+
+/* About styling Ends */
